alterado adocao.html

--- a/adocao.html
+++ b/adocao.html
@@ -52,15 +52,7 @@
           <div class="input-campos">
             <ul>
               <li>
-                Você gosta de animais?
-              <li>
-                <input class="selecao" type="radio" name="animal_casa" value="sim">
-                <label for="">Sim</label>
-                <input class="selecao" type="radio" name="animal_casa" value="nao">
-                <label for="">Não</label></li>
-              </li>
-                <li>
-                Você ja tem algum animal em sua casa?
+                1-Você gosta de animais?
               <li>
                 <input class="selecao" type="radio" name="animal_casa" value="sim">
                 <label for="">Sim</label>
@@ -68,87 +60,98 @@
                 <label for="">Não</label></li>
               </li>
               <li>
-                Se a resposta anterior foi sim, tem quantos são? <small>se não coloque menos de 2.</small>
+               2-Você ja tem algum animal em sua casa?
               <li>
-                <input class="selecao" type="radio" name="animal_casa" value="sim">
+                <input class="selecao" type="radio" name="animal_casa_tem" value="sim">
+                <label for="">Sim</label>
+                <input class="selecao" type="radio" name="animal_casa_tem" value="nao">
+                <label for="">Não</label></li>
+              </li>
+              <li>
+                3-Se a resposta anterior foi sim, tem quantos são? <small>se não coloque menos de 2.</small>
+              <li>
+                <input class="selecao" type="radio" name="animal_casa_tem_quantos" value="sim">
                 <label for="">menos de 2</label>
-                <input class="selecao" type="radio" name="animal_casa" value="sim">
+                <input class="selecao" type="radio" name="animal_casa_tem_quantos" value="sim">
                 <label for="">de 2 a 4</label>
-                <input class="selecao" type="radio" name="animal_casa" value="nao">
+                <input class="selecao" type="radio" name="animal_casa_tem_quantos" value="nao">
                 <label for="">mais de 4</label></li>
               </li>
               <li>
-                Você tem condições de ter um animal em sua casa?
-              <li> <input class="selecao" type="radio" name="animal_casa" value="sim">
+                4-Você tem condições de ter um animal em sua casa?
+              <li>
+                <input class="selecao" type="radio" name="animal_casa" value="sim">
                 <label for="">Sim</label>
                 <input class="selecao" type="radio" name="animal_casa" value="nao">
                 <label for="">Não</label></li>
 
               </li>
               <li>
-                Sua residencia é ?
+                5-Sua residencia é ?
               <li>
                 <input class="selecao" type="radio" name="animal_casa" value="sim">
                 <label for="">Casa</label>
                 <input class="selecao" type="radio" name="animal_casa" value="nao">
                 <label for="">Apartamento</label></li>
-             <input class="selecao" type="radio" name="animal_casa" value="sim">
-                <label class="selecao-label" for="">Própria</label>
-                <input class="selecao" type="radio" name="animal_casa" value="nao">
-                <label class="selecao-label" for="">Alugada</label></li>
+              <input class="selecao" type="radio" name="animal_casa_tipo" value="apartamento">
+              <label class="selecao-label" for="">Própria</label>
+              <input class="selecao" type="radio" name="animal_casa_tipo" value="casa">
+              <label class="selecao-label" for="">Alugada</label></li>
               </li>
-               
+              <li>
                 Voçê tem disponibilidade de horario para passeios ?
               <li>
-                <input class="selecao" type="radio" name="animal_casa" value="sim">
+                <input class="selecao" type="radio" name="animal_casa_disponibilidade" value="sim">
                 <label class="selecao-label" for="">Sim</label>
-                <input class="selecao" type="radio" name="animal_casa" value="nao">
+                <input class="selecao" type="radio" name="animal_casa_disponibilidade" value="nao">
                 <label class="selecao-label" for="">não</label></li>
               </li>
               <li>
-                Voçê tem Filhos(as) ?
+                6-Voçê tem Filhos(as) ?
               <li>
-                <input class="selecao" type="radio" name="animal_casa" value="sim">
+                <input class="selecao" type="radio" name="animal_casa_filhos" value="sim">
                 <label class="selecao-label" for="">Sim</label>
-                <input class="selecao" type="radio" name="animal_casa" value="nao">
+                <input class="selecao" type="radio" name="animal_casa_filhos" value="nao">
                 <label class="selecao-label" for="">não</label></li>
               </li>
               <li>
-                Se a resposta anterior foi sim, tem quantos são? <small>se não coloque menos de 2.</small>
+                7-Se a resposta anterior foi sim, tem quantos são? <small>se não coloque menos de 2.</small>
               <li>
-                <input class="selecao" type="radio" name="animal_casa" value="sim">
+                <input class="selecao" type="radio" name="animal_casa_filhos_quantidade" value="1">
                 <label for="">1</label>
-                <input class="selecao" type="radio" name="animal_casa" value="sim">
+                <input class="selecao" type="radio" name="animal_casa_filhos_quantidade" value="2">
                 <label for="">2</label>
-                <input class="selecao" type="radio" name="animal_casa" value="nao">
+                <input class="selecao" type="radio" name="animal_casa_filhos_quantidade" value="3">
                 <label for="">mais de 2</label></li>
               </li>
               <li>
-                Voçê tem disponibilidade de horario para passeios ?
+                8-Voçê tem disponibilidade de horario para passeios ?
               <li>
-                <input class="selecao" type="radio" name="animal_casa" value="sim">
+                <input class="selecao" type="radio" name="animal_casa_passeio" value="sim">
                 <label class="selecao-label" for="">Sim</label>
-                <input class="selecao" type="radio" name="animal_casa" value="nao">
+                <input class="selecao" type="radio" name="animal_casa_passeio" value="nao">
                 <label class="selecao-label" for="">não</label></li>
               </li>
               <li>
-                Na sua ausencia tem alguem que possa cuidar do animal ?
+                9-Na sua ausencia tem alguem que possa cuidar do animal ?
               </li>
-              <li><input class="selecao" type="radio" name="animal_casa" value="sim">
+              <li><input class="selecao" type="radio" name="animal_casa_cuidar" value="sim">
                 <label class="selecao-label" for="">Sim</label>
-                <input class="selecao" type="radio" name="animal_casa" value="nao">
+                <input class="selecao" type="radio" name="animal_casa_cuidar" value="nao">
                 <label class="selecao-label" for="">não</label>
               </li>
               <li>
-               Todos em sua casa aceitam um animal em casa ?
+                10-Todos em sua casa aceitam um animal em casa ?
               </li>
-              <li><input class="selecao" type="radio" name="animal_casa" value="sim">
+              <li><input class="selecao" type="radio" name="animal_casa_aceitam" value="sim">
                 <label class="selecao-label" for="">Sim</label>
-                <input class="selecao" type="radio" name="animal_casa" value="nao">
+                <input class="selecao" type="radio" name="animal_casa_aceitam" value="nao">
                 <label class="selecao-label" for="">não</label>
               </li>
             </ul>
           </div>
+          <input type="submit" value="enviar">
+
 
         </form>
       </div>
