--- a/index.html
+++ b/index.html
@@ -5,94 +5,95 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="imagens/MicrosoftTeams-image.png" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="main.css" />
     <title>Adote um amigo</title>
   </head>
+
   <body>
     <header>
       <div class="caixaAdote">
-      Faça hoje mesmo a adoção de um novo amigo.  
-      </div>   
+        Adote um amigo
+        <input type="button" value="login" />
+      </div>
       <div class="caixaLogo">
-        <h1><a href="home.html"><img src="imagens/MicrosoftTeams-image.png" alt="Imagem do Logo da empresa"/></a></h1></div>
-        <div class="caixaMenu">
-          <nav>
-              <ul>
-                  <li><a href="home.html">HOME</a></li>
-                  <li><a href="#catalogo">CATÁLOGO</a></li>
-                  
-                  <li><a href="#colaboradores">COLABORADORES</a></li>
-                  <li><a href="#contato">CONTATO</a></li>
-                  <li><a href="#missao">MISSÃO</a></li>
-              </ul>
-          </nav>
+        <h1>
+          <a href="home.html"
+            ><img
+              src="imagens/MicrosoftTeams-image.png"
+              alt="Imagem do Logo da empresa"
+          /></a>
+        </h1>
+      </div>
+      <div class="caixaMenu">
+        <nav>
+          <ul>
+            <li><a href="home.html">HOME</a></li>
+            <li><a href="#catalogo">CATÁLOGO</a></li>
+            <li><a href="#colaboradores">COLABORADORES</a></li>
+            <li><a href="#contato">CONTATO</a></li>
+            <li><a href="#principal">MISSÃO</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
-   <main>
-    <section class="principal">
-      <h2 class="titulo-principal" id="sobre"> Adote um Amigo</h2></h2>
-      <img class="principal-imagem" src="imagens/coração.png" alt="Imagem de coração" />
-          <p class="paragrafo-principal">
-              Neste site temos como intuito proporcionar a facilidade e segurança na hora de adotar ou doar seu pet.
-          </p>
-    </section>
-    <section class="catalogo">
-    <h2 class="titulo-catalogo">Catalogo</h2>
+    <main>
+      <section class="principal-banner"><h1>aqui vem o banner</h1></section>
+      <section class="principal-sobre" id="principal">
+        <img
+          class="principal-imagem"
+          src="imagens/coração.png"
+          alt="Imagem de coração"
+        />
+        <p class="paragrafo-principal">
+          <strong>Adote um amigo</strong> apresenta uma maneira simples de se
+          adotar ou anunciar para adoção com segurança e facilidade. Nós fazemos
+          a conexão entre quem deseja adotar um pet, com quem quer ou precisa
+          doar. Não somos uma associação,ong, nem temos instalações de canil
+          ,somos o intermediario que facilita este processo através dos anúncios
+          aqui colocados,ajudamos animais que estejam para adoção a chegarem a
+          quem os procure, criando assim oportunidades de integrar uma nova vida
+          ao animal, apresentamos um formulario online que simplifica processo e
+          entrevista com os potenciais adotantes. Juntos somos mais fortes!
+        </p>
+      </section>
+
+      <section class="colaboradores" id="colaboradores">
         <table>
-            <tr id="catalogo">
-                <td><img src="imagens/caramelo.jfif" /> 
-                <td><img src="imagens/husky.jfif" /> 
-                <td><img src="imagens/pastor.jfif" /> 
-            </tr>
-            <tr>
-                <td><figcaption>Caramelo</figcaption></td>
-                <td><figcaption>Husky</figcaption></td>
-                <td><figcaption>Pastor alemão</figcaption></td>
-            </tr>
+          <tr>
+            <th>Doação</th>
+            <th>Adoção</th>
+            <th>Campanhas</th>
+          </tr>
+          <tr>
+            <td>
+              <img src="imagens/doacao.png" alt="Doação" />
+              <p class="imagem-texto">
+                Acesse aqui para doar um animal, lembre-se estamos aqui para te
+                ajudar neste momento dificil ..
+              </p>
+            </td>
+            <td>
+              <img src="imagens/adocaov2.png" alt="Adoção" />
+              <p class="imagem-texto">
+                Acesse aqui para doar um animal, lembre-se estamos aqui para te
+                ajudar neste momento dificil ..
+              </p>
+            </td>
+            <td>
+              <img src="imagens/campanhas.png" alt="Campanhas" />
+              <p class="imagem-texto">
+                Acesse aqui para doar um animal, lembre-se estamos aqui para te
+                ajudar neste momento dificil ..
+              </p>
+            </td>
+          </tr>
         </table>
-</section>
-    <section class="colaboradores">
-      <h2 class="titulo-colaboradores" id="colaboradores"> Colaboradores </h2>
-      <table>
-          <tr>
-              <th>Doação</th>
-              <th>Adoção</th>
-              <th>Campanhas</th>
-          </tr>
-          <tr>
-              <td><img src="imagens/doacao.png" alt="Doação"></td>
-              <td><img src="imagens/adocaov2.png" alt="Adoção"></td>
-              <td><img src="imagens/campanhas.png" alt="Campanhas"></td>
-          </tr>
-      </table>
-  </section>
-  
-          <section class="missao">
-          <h2 class="titulo-missao" id="missao"> Missão</h2></h2>
-          <p>    
-            <em><strong>Nossa missão é oferecer serviços exclusivos e tecnologia de ponta, prezando pelo bem estar e segurança dos animais.</strong>.</em>
-          </p>    
-          <p>
-              Dessa maneira vinculando animais que precisam de um lar a pessoas que desejam um amigo.
-              
-          </p>
-  </section>
-  <section class="contato">
-    <h2 class="titulo-contato">Entre em Contato</h2>
-        <div id="contato">
-            <nav>
-                <ul>
-                    <li>✉</li>
-                    <li>ⓕ</li>
-                    <li>☏</li>
-                </ul>
-            </nav>
-        </div>
-</section>
-   </main>
-   <footer>
-    <img src="imagens/MicrosoftTeams-image.png" />
-    <p class="copyright">&copy; Copyright Adote um Amigo 2022</p>
-</footer>
+      </section>
+      <section class="principal-catalogo"><h2>aqui vem o catalogo</h2></section>
+    </main>
+    <footer>
+      <img src="imagens/MicrosoftTeams-image.png" />
+      <p class="copyright">&copy; Copyright Adote um Amigo 2022</p>
+    </footer>
   </body>
 </html>
